--- a/functions/test-db/json2/scvo/templates/events/event-cjs-search.hbs
+++ b/functions/test-db/json2/scvo/templates/events/event-cjs-search.hbs
@@ -3,7 +3,7 @@
         <div class="splash-overlay{{#if primaryResponse.hits.hits.[0]._source.hide_overlay}} splash-overlay-hidden{{/if}}">
             <div class="container-fluid">
                 <div class="mdc-layout-grid">
-                    {{#if primaryResponse.hits.hits.[0]._source.header_text}}
+                    {{#if primaryResponse.hits.hits.[0]._source.header_text ~}}
                     <img src="{{primaryResponse.hits.hits.[0]._source.header_text}}" alt="{{primaryResponse.hits.hits.[0]._source.title}}" class="header-text" />
                     {{else}}
                     <h1 class="header-text">
@@ -11,7 +11,7 @@
                             Training opportunities
                         </span>
                     </h1>
-                    {{/if}}
+                    {{/if ~}}
                 </div>
                 {{> header_caption}}
             </div>
@@ -37,11 +37,11 @@
                         <div class="mdc-form-field">
                             <select class="mdc-select" role="listbox" id="events-locations" name="location">
                                 <option value="" {{#if params.query.location}}{{else}}selected{{/if}}>Any location</option>
-                                {{#each supplimentaryResponses.types.aggregations.locations.buckets}}
-                                {{#if key}}
+                                {{#each supplimentaryResponses.types.aggregations.locations.buckets ~}}
+                                {{#if key ~}}
                                 <option value="{{key}}" {{#compare ../params.query.location "===" key}}selected{{/compare}}>{{key}}</option>
-                                {{/if}}
-                                {{/each}}
+                                {{/if ~}}
+                                {{/each ~}}
                             </select>
                         </div>
                         <button class="mdc-button mdc-button--raised" type="submit">
@@ -67,9 +67,9 @@
 
                         {{> search_info}}
 
-                        {{#each primaryResponse.hits.hits}}
+                        {{#each primaryResponse.hits.hits ~}}
                         {{{_source.rendered.scvo_list}}}
-                        {{/each}}
+                        {{/each ~}}
 
                         {{> pagination}}
                     </div>
