--- a/functions/test-db/json2/scvo/templates/events/event-digital-search.hbs
+++ b/functions/test-db/json2/scvo/templates/events/event-digital-search.hbs
@@ -3,7 +3,7 @@
         <div class="splash-overlay{{#if primaryResponse.hits.hits.[0]._source.hide_overlay}} splash-overlay-hidden{{/if}}">
             <div class="container-fluid">
                 <div class="mdc-layout-grid">
-                    {{#if primaryResponse.hits.hits.[0]._source.header_text}}
+                    {{#if primaryResponse.hits.hits.[0]._source.header_text ~}}
                     <img src="{{primaryResponse.hits.hits.[0]._source.header_text}}" alt="{{primaryResponse.hits.hits.[0]._source.title}}" class="header-text" />
                     {{else}}
                     <h1 class="header-text">
@@ -11,7 +11,7 @@
                             Digital events
                         </span>
                     </h1>
-                    {{/if}}
+                    {{/if ~}}
                 </div>
                 {{> header_caption}}
             </div>
@@ -36,29 +36,29 @@
                         <div class="mdc-form-field">
                             <select class="mdc-select" role="listbox" id="events-course_type" name="course_type">
                                 <option value="" {{#if params.query.course_type}}{{else}}selected{{/if}}>Select event type</option>
-                                {{#each supplimentaryResponses.types.aggregations.types.buckets}}
+                                {{#each supplimentaryResponses.types.aggregations.types.buckets ~}}
                                 <option value="{{key}}" {{#compare ../params.query.course_type "===" key}}selected{{/compare}}>{{key}}</option>
-                                {{/each}}
+                                {{/each ~}}
                             </select>
                         </div>
                         <div class="mdc-form-field">
                             <select class="mdc-select" role="listbox" id="events-month" name="month">
                                 <option value="" {{#if params.query.month}}{{else}}selected{{/if}}>Any month</option>
-                                {{#each supplimentaryResponses.types.aggregations.months.buckets}}
-                                {{#if key}}
+                                {{#each supplimentaryResponses.types.aggregations.months.buckets ~}}
+                                {{#if key ~}}
                                 <option value="{{key}}" {{#compare ../params.query.month "===" key}}selected{{/compare}}>{{key}}</option>
-                                {{/if}}
-                                {{/each}}
+                                {{/if ~}}
+                                {{/each ~}}
                             </select>
                         </div>
                         <div class="mdc-form-field">
                             <select class="mdc-select" role="listbox" id="events-locations" name="location">
                                 <option value="" {{#if params.query.location}}{{else}}selected{{/if}}>Any location</option>
-                                {{#each supplimentaryResponses.types.aggregations.locations.buckets}}
-                                {{#if key}}
+                                {{#each supplimentaryResponses.types.aggregations.locations.buckets ~}}
+                                {{#if key ~}}
                                 <option value="{{key}}" {{#compare ../params.query.location "===" key}}selected{{/compare}}>{{key}}</option>
-                                {{/if}}
-                                {{/each}}
+                                {{/if ~}}
+                                {{/each ~}}
                             </select>
                         </div>
                         <!-- <div class="mdc-form-field">
@@ -80,9 +80,9 @@
                     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content event-content">
                         {{> search_info}}
 
-                        {{#each primaryResponse.hits.hits}}
+                        {{#each primaryResponse.hits.hits ~}}
                         {{{_source.rendered.scvo_list}}}
-                        {{/each}}
+                        {{/each ~}}
 
                         {{> pagination}}
                     </div>
