--- a/functions/test-db/json2/scvo/templates/pages/page-credit-union-loan-calculator.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-credit-union-loan-calculator.hbs
@@ -1,7 +1,7 @@
 <div class="page credit-union">
     {{> header_splash}}
     <div class="container-fluid">
-        {{#> handle_404}}
+        {{#> handle_404 ~}}
         {{> breadcrumbs}}
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
@@ -67,7 +67,7 @@
                 </div>
             </div>
         </div>
-        {{/handle_404}}
+        {{/handle_404 ~}}
     </div>
 </div>
 <script src="https://storage.googleapis.com/scvo-assets/assets/js/scvo/credit-union-loan-calculator.js"></script>
