--- a/functions/test-db/json2/scvo/templates/pages/page-json-ld.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-json-ld.hbs
@@ -1,5 +1,5 @@
-{{#if multipleResults}}
-    { "error": "404" }
+{{#if multipleResults ~}}
+{ "error": "404" }
 {{else}}
-    {{{primaryResponse.hits.hits.[0]._source.rendered.json_ld}}}
-{{/if}}
+{{{primaryResponse.hits.hits.[0]._source.rendered.json_ld}}}
+{{/if ~}}
