--- a/functions/test-db/json2/scvo/templates/documents/evidence-library-document.hbs
+++ b/functions/test-db/json2/scvo/templates/documents/evidence-library-document.hbs
@@ -1,7 +1,7 @@
 <div class="library">
     {{> header_splash}}
     <div class="container-fluid">
-        {{#> handle_404}}
+        {{#> handle_404 ~}}
         <ul class="breadcrumbs">
             <li><a href="/">Home</a></li>
             <li><a href="/policy-research">Policy &amp; research</a></li>
@@ -18,6 +18,6 @@
                 </div>
             </div>
         </div>
-        {{/handle_404}}
+        {{/handle_404 ~}}
     </div>
 </div>
