--- a/functions/test-db/json2/scvo/templates/events/event-cjs-booking.hbs
+++ b/functions/test-db/json2/scvo/templates/events/event-cjs-booking.hbs
@@ -13,7 +13,7 @@
             <div class="mdc-layout-grid">
                 <div class="mdc-layout-grid__inner">
                     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone content event-content">
-                        [FORM TO BE ADDED]
+                        <p><strong>BOOKING FORM NOT YET SET UP</strong></p>
 
                         {{#compare course_type "===" "Training Course" ~}}
                         <p>
