--- a/functions/test-db/json2/scvo/templates/events/event-digital-booking.hbs
+++ b/functions/test-db/json2/scvo/templates/events/event-digital-booking.hbs
@@ -13,7 +13,7 @@
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone content event-content">
                     <iframe src="https://www.surveygizmo.eu/s3/90064254/Event-Booking-Digital-Events?sfid={{primaryResponse.hits.hits.[0]._source.Id}}" frameborder="0" width="100%" height="400" style="overflow:hidden"></iframe>
 
-                    {{#compare primaryResponse.hits.hits.[0]._source.course_type "===" "Training Course"}}
+                    {{#compare primaryResponse.hits.hits.[0]._source.course_type "===" "Training Course" ~}}
                     <p>
                         <strong><a href="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/Policies-procedures-and-TCs.docx" download>Policies, procedures and terms &amp; conditions</a></strong>
                     </p>
@@ -21,7 +21,7 @@
                     <p>
                         <strong><a href="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/Policies-procedures-and-TCs.docx" download>Policies, procedures and terms &amp; conditions</a></strong>
                     </p>
-                    {{/compare}}
+                    {{/compare ~}}
                 </div>
             </div>
         </div>
