--- a/functions/test-db/json2/scvo/templates/events/event.hbs
+++ b/functions/test-db/json2/scvo/templates/events/event.hbs
@@ -1,7 +1,7 @@
 <div class="event">
     {{> header_splash_event}}
     <div class="container-fluid page-content">
-        {{#> handle_404}}
+        {{#> handle_404 ~}}
         {{#with primaryResponse.hits.hits.[0]._source ~}}
         <ul class="breadcrumbs">
             <li><a href="/">Home</a></li>
@@ -35,6 +35,6 @@
                 </div>
             </div>
         </div>
-        {{/handle_404}}
+        {{/handle_404 ~}}
     </div>
 </div>
