--- a/functions/test-db/json2/scvo/templates/funding/funding-updates.hbs
+++ b/functions/test-db/json2/scvo/templates/funding/funding-updates.hbs
@@ -3,7 +3,7 @@
         <div class="splash-overlay{{#if primaryResponse.hits.hits.[0]._source.hide_overlay}} splash-overlay-hidden{{/if}}">
             <div class="container-fluid">
                 <div class="mdc-layout-grid">
-                    {{#if primaryResponse.hits.hits.[0]._source.header_text}}
+                    {{#if primaryResponse.hits.hits.[0]._source.header_text ~}}
                     <img src="{{primaryResponse.hits.hits.[0]._source.header_text}}" alt="{{primaryResponse.hits.hits.[0]._source.title}}" class="header-text" />
                     {{else}}
                     <h1 class="header-text">
@@ -11,7 +11,7 @@
                             Funding update – {{momentFormat (moment (lastItem (split (atob params.range) "-")) "x") "Do MMMM YYYY"}}
                         </span>
                     </h1>
-                    {{/if}}
+                    {{/if ~}}
                 </div>
                 {{> header_caption}}
             </div>
@@ -35,11 +35,11 @@
 
         <div class="mdc-layout-grid equal-height">
             <div class="mdc-layout-grid__inner">
-                {{#each primaryResponse.hits.hits}}
+                {{#each primaryResponse.hits.hits ~}}
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
                     {{{_source.rendered.scvo_list}}}
                 </div>
-                {{/each}}
+                {{/each ~}}
             </div>
         </div>
         {{> pagination}}
