--- a/functions/test-db/json2/scvo/templates/grants/grant-ccrf.hbs
+++ b/functions/test-db/json2/scvo/templates/grants/grant-ccrf.hbs
@@ -1,7 +1,7 @@
 <div class="grant-charter">
     {{> header_splash}}
     <div class="container-fluid">
-        {{#> handle_404}}
+        {{#> handle_404 ~}}
         <ul class="breadcrumbs">
             <li><a href="/">Home</a></li>
             <li><a href="/running-your-organisation/">Running your organisation</a></li>
@@ -13,12 +13,10 @@
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 content grant-content">
-                    {{#with primaryResponse.hits.hits.[0]}}
-                    {{{_source.rendered.scvo_full}}}
-                    {{/with}}
+                    {{{primaryResponse.hits.hits.[0]._source.rendered.scvo_full}}}
                 </div>
             </div>
         </div>
-        {{/handle_404}}
+        {{/handle_404 ~}}
     </div>
 </div>
