--- a/functions/test-db/json2/scvo/templates/grants/grant-cyber-search.hbs
+++ b/functions/test-db/json2/scvo/templates/grants/grant-cyber-search.hbs
@@ -3,7 +3,7 @@
         <div class="splash-overlay{{#if primaryResponse.hits.hits.[0]._source.hide_overlay}} splash-overlay-hidden{{/if}}">
             <div class="container-fluid">
                 <div class="mdc-layout-grid">
-                    {{#if primaryResponse.hits.hits.[0]._source.header_text}}
+                    {{#if primaryResponse.hits.hits.[0]._source.header_text ~}}
                     <img src="{{primaryResponse.hits.hits.[0]._source.header_text}}" alt="{{primaryResponse.hits.hits.[0]._source.title}}" class="header-text" />
                     {{else}}
                     <h1 class="header-text">
@@ -11,7 +11,7 @@
                             {{{supplimentaryResponses.page.hits.hits.[0]._source.title}}}
                         </span>
                     </h1>
-                    {{/if}}
+                    {{/if ~}}
                 </div>
                 {{> header_caption}}
             </div>
@@ -28,9 +28,7 @@
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 content grant-content">
-                    {{#with supplimentaryResponses.page.hits.hits.[0]._source}}
-                    {{{rendered.scvo_full}}}
-                    {{/with}}
+                    {{{supplimentaryResponses.page.hits.hits.[0]._source.rendered.scvo_full}}}
 
                     <hr />
 
@@ -38,11 +36,11 @@
 
                     <div class="mdc-layout-grid equal-height v-margin">
                         <div class="mdc-layout-grid__inner">
-                            {{#each primaryResponse.hits.hits}}
+                            {{#each primaryResponse.hits.hits ~}}
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
                                 {{{_source.rendered.scvo_card}}}
                             </div>
-                            {{/each}}
+                            {{/each ~}}
                         </div>
                     </div>
 
