--- a/functions/test-db/json2/scvo/templates/jobs/goodmoves-job-search.hbs
+++ b/functions/test-db/json2/scvo/templates/jobs/goodmoves-job-search.hbs
@@ -3,7 +3,7 @@
         <div class="splash-overlay{{#if primaryResponse.hits.hits.[0]._source.hide_overlay}} splash-overlay-hidden{{/if}}">
             <div class="container-fluid">
                 <div class="mdc-layout-grid">
-                    {{#if primaryResponse.hits.hits.[0]._source.header_text}}
+                    {{#if primaryResponse.hits.hits.[0]._source.header_text ~}}
                     <img src="{{primaryResponse.hits.hits.[0]._source.header_text}}" alt="{{primaryResponse.hits.hits.[0]._source.title}}" class="header-text" />
                     {{else}}
                     <h1 class="header-text">
@@ -11,7 +11,7 @@
                             Job search
                         </span>
                     </h1>
-                    {{/if}}
+                    {{/if ~}}
                 </div>
                 {{> header_caption}}
             </div>
@@ -40,42 +40,42 @@
                                         <label class="mdc-textfield__label" for="role">Role</label>
                                         <select class="mdc-select" role="listbox" id="jobs-role" name="role">
                                             <option value="" {{#if params.query.role}}{{else}}selected{{/if}}>Any role</option>
-                                            {{#each supplimentaryResponses.types.aggregations.roles.buckets}}
+                                            {{#each supplimentaryResponses.types.aggregations.roles.buckets ~}}
                                             <option value="{{key}}" {{#compare ../params.query.role "===" key}}selected{{/compare}}>{{key}}</option>
-                                            {{/each}}
+                                            {{/each ~}}
                                         </select>
                                     </div>
                                     <div class="mdc-form-field">
                                         <label class="mdc-textfield__label" for="sector">Sector</label>
                                         <select class="mdc-select" role="listbox" id="jobs-sector" name="sector">
                                             <option value="" {{#if params.query.sector}}{{else}}selected{{/if}}>Any sector</option>
-                                            {{#each supplimentaryResponses.types.aggregations.sectors.buckets}}
-                                            {{#if key}}
+                                            {{#each supplimentaryResponses.types.aggregations.sectors.buckets ~}}
+                                            {{#if key ~}}
                                             <option value="{{key}}" {{#compare ../params.query.sector "===" key}}selected{{/compare}}>{{key}}</option>
-                                            {{/if}}
-                                            {{/each}}
+                                            {{/if ~}}
+                                            {{/each ~}}
                                         </select>
                                     </div>
                                     <div class="mdc-form-field">
                                         <label class="mdc-textfield__label" for="jobs-region">Region</label>
                                         <select class="mdc-select" role="listbox" id="region" name="region">
                                             <option value="" {{#if params.query.region}}{{else}}selected{{/if}}>Any region</option>
-                                            {{#each supplimentaryResponses.types.aggregations.regions.buckets}}
-                                            {{#if key}}
+                                            {{#each supplimentaryResponses.types.aggregations.regions.buckets ~}}
+                                            {{#if key ~}}
                                             <option value="{{key}}" {{#compare ../params.query.region "===" key}}selected{{/compare}}>{{key}}</option>
-                                            {{/if}}
-                                            {{/each}}
+                                            {{/if ~}}
+                                            {{/each ~}}
                                         </select>
                                     </div>
                                     <div class="mdc-form-field">
                                         <label class="mdc-textfield__label" for="status">Status</label>
                                         <select class="mdc-select" role="listbox" id="jobs-status" name="status">
                                             <option value="" {{#if params.query.status}}{{else}}selected{{/if}}>Any status</option>
-                                            {{#each supplimentaryResponses.types.aggregations.statuses.buckets}}
-                                            {{#if key}}
+                                            {{#each supplimentaryResponses.types.aggregations.statuses.buckets ~}}
+                                            {{#if key ~}}
                                             <option value="{{key}}" {{#compare ../params.query.status "===" key}}selected{{/compare}}>{{key}}</option>
-                                            {{/if}}
-                                            {{/each}}
+                                            {{/if ~}}
+                                            {{/each ~}}
                                         </select>
                                     </div>
                                     <div class="mdc-textfield mdc-textfield--upgraded">
@@ -93,9 +93,9 @@
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content v-margin">
                     {{> search_info}}
 
-                    {{#each primaryResponse.hits.hits}}
+                    {{#each primaryResponse.hits.hits ~}}
                     {{{_source.rendered.scvo_search_result}}}
-                    {{/each}}
+                    {{/each ~}}
 
                     {{> pagination}}
                 </div>
