--- a/functions/test-db/json2/scvo/templates/jobs/scvo-jobs.hbs
+++ b/functions/test-db/json2/scvo/templates/jobs/scvo-jobs.hbs
@@ -1,16 +1,14 @@
 <div class="page about">
     {{> header_splash}}
     <div class="container-fluid">
-        {{#> handle_404}}
+        {{#> handle_404 ~}}
         {{> breadcrumbs}}
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content">
-                    {{#with primaryResponse.hits.hits.[0]._source}}
-                    {{{rendered.scvo_full}}}
-                    {{/with}}
+                    {{{primaryResponse.hits.hits.[0]._source.rendered.scvo_full}}}
 
-                    {{#compare supplimentaryResponses.scvo_jobs.hits.total "===" 0}}
+                    {{#compare supplimentaryResponses.scvo_jobs.hits.total "===" 0 ~}}
                     <p>
                         We don't currently have any vacancies but when we do they will appear here automatically.
                     </p>
@@ -20,16 +18,16 @@
                     </p>
                     {{else}}
                     <h3>Current vacancies with SCVO</h3>
-                    {{#each supplimentaryResponses.scvo_jobs.hits.hits}}
+                    {{#each supplimentaryResponses.scvo_jobs.hits.hits ~}}
                     {{{_source.rendered.scvo_search_result}}}
-                    {{/each}}
-                    {{/compare}}
+                    {{/each ~}}
+                    {{/compare ~}}
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
                     {{> menu_about}}
                 </div>
             </div>
         </div>
-        {{/handle_404}}
+        {{/handle_404 ~}}
     </div>
 </div>
