--- a/functions/test-db/json2/scvo/templates/main_search/search.hbs
+++ b/functions/test-db/json2/scvo/templates/main_search/search.hbs
@@ -34,14 +34,14 @@
 
                         {{> search_info}}
 
-                        {{#each primaryResponse.hits.hits}}
-                            {{>highlight_result}}
-                        {{/each}}
+                        {{#each primaryResponse.hits.hits ~}}
+                        {{>highlight_result}}
+                        {{/each ~}}
 
                         {{> pagination}}
                     </div>
                     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar">
-                        {{#*inline "filter_checkbox"}}
+                        {{#*inline "filter_checkbox" ~}}
                             <div class="mdc-form-field">
                                 <div class="mdc-checkbox">
                                     <input type="checkbox" name="type" id="type-{{value}}"
@@ -58,7 +58,7 @@
                                     {{label}}
                                 </label>
                             </div>
-                        {{/inline}}
+                        {{/inline ~}}
 
                         <h2>Filters</h2>
                         <h3>SCVO</h3>
