--- a/functions/test-db/json2/scvo/templates/members/member-search.hbs
+++ b/functions/test-db/json2/scvo/templates/members/member-search.hbs
@@ -3,7 +3,7 @@
         <div class="splash-overlay{{#if primaryResponse.hits.hits.[0]._source.hide_overlay}} splash-overlay-hidden{{/if}}">
             <div class="container-fluid">
                 <div class="mdc-layout-grid">
-                    {{#if primaryResponse.hits.hits.[0]._source.header_text}}
+                    {{#if primaryResponse.hits.hits.[0]._source.header_text ~}}
                     <img src="{{primaryResponse.hits.hits.[0]._source.header_text}}" alt="{{primaryResponse.hits.hits.[0]._source.title}}" class="header-text" />
                     {{else}}
                     <h1 class="header-text">
@@ -11,7 +11,7 @@
                             Our members
                         </span>
                     </h1>
-                    {{/if}}
+                    {{/if ~}}
                 </div>
                 {{> header_caption}}
             </div>
@@ -53,19 +53,19 @@
                             </div>
                         </div>
 
-                        {{#if params.query.q}}
+                        {{#if params.query.q ~}}
                         {{> search_info}}
                         {{else}}
                         <h3>Our members include&hellip;</h3>
-                        {{/if}}
+                        {{/if ~}}
 
-                        {{#each primaryResponse.hits.hits}}
+                        {{#each primaryResponse.hits.hits ~}}
                         {{{this._source.rendered.scvo_list}}}
-                        {{/each}}
+                        {{/each ~}}
 
-                        {{#ifAny params.query.q params.query.type}}
+                        {{#ifAny params.query.q params.query.type ~}}
                             {{> pagination}}
-                        {{/ifAny}}
+                        {{/ifAny ~}}
                     </div>
                     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
                         {{> menu_about}}
