--- a/functions/test-db/json2/scvo/templates/pages/page-charity-awards.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-charity-awards.hbs
@@ -1,21 +1,19 @@
 <div class="page">
     {{> header_splash}}
     <div class="container-fluid">
-        {{#> handle_404}}
+        {{#> handle_404 ~}}
         {{> breadcrumbs}}
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content">
-                    {{#with primaryResponse.hits.hits.[0]._source}}
-                    {{{rendered.scvo_full}}}
-                    {{/with}}
+                    {{{primaryResponse.hits.hits.[0]._source.rendered.scvo_full}}}
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
                     {{> menu_charity_awards}}
                 </div>
             </div>
         </div>
-        {{/handle_404}}
+        {{/handle_404 ~}}
     </div>
     <div class="swiper-container">
         <div class="swiper-wrapper">
