--- a/functions/test-db/json2/scvo/templates/pages/page-funding-landing.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-funding-landing.hbs
@@ -6,42 +6,40 @@
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 content page-content">
-                    {{#with primaryResponse.hits.hits.[0]._source}}
-                    {{{rendered.scvo_full}}}
-                    {{/with}}
+                    {{{primaryResponse.hits.hits.[0]._source.rendered.scvo_full}}}
                 </div>
-                {{#compare supplimentaryResponses.recently_updated_funds.hits.total ">" 0}}
+                {{#compare supplimentaryResponses.recently_updated_funds.hits.total ">" 0 ~}}
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 related page-related">
                     <h3 class="blogs">Recently updated funds</h3>
                     <div class="mdc-layout-grid">
                         <div class="mdc-layout-grid__inner">
-                            {{#each supplimentaryResponses.recently_updated_funds.hits.hits}}
+                            {{#each supplimentaryResponses.recently_updated_funds.hits.hits ~}}
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet  mdc-layout-grid__cell--span-4-phone">
                                 {{{_source.rendered.scvo_gist}}}
                             </div>
-                            {{/each}}
+                            {{/each ~}}
                         </div>
                     </div>
                     <a href="http://fundingscotland.com" class="mdc-button v-margin-full pull-right">Find more</a>
                 </div>
-                {{/compare}}
-                {{#compare supplimentaryResponses.related_posts.hits.total ">" 0}}
+                {{/compare ~}}
+                {{#compare supplimentaryResponses.related_posts.hits.total ">" 0 ~}}
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 related page-related">
                     <h3 class="blogs">Related posts</h3>
                     <div class="mdc-layout-grid">
                         <div class="mdc-layout-grid__inner">
-                            {{#each supplimentaryResponses.related_posts.hits.hits}}
+                            {{#each supplimentaryResponses.related_posts.hits.hits ~}}
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet  mdc-layout-grid__cell--span-4-phone">
                                 {{{_source.rendered.scvo_gist}}}
                             </div>
-                            {{/each}}
+                            {{/each ~}}
                         </div>
                     </div>
                 </div>
-                {{/compare}}
+                {{/compare ~}}
             </div>
         </div>
-        {{/handle_404}}
+        {{/handle_404 ~}}
     </div>
 </div>
 
