--- a/functions/test-db/json2/scvo/templates/pages/page-gathering.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-gathering.hbs
@@ -1,32 +1,30 @@
 <div class="page">
     {{> header_splash}}
     <div class="container-fluid">
-        {{#> handle_404}}
+        {{#> handle_404 ~}}
         {{> breadcrumbs}}
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 content page-content">
-                    {{#with primaryResponse.hits.hits.[0]._source}}
-                    {{{rendered.scvo_full}}}
-                    {{/with}}
+                    {{{primaryResponse.hits.hits.[0]._source.rendered.scvo_full}}}
                 </div>
-                {{#compare supplimentaryResponses.related_posts.hits.total ">" 0}}
+                {{#compare supplimentaryResponses.related_posts.hits.total ">" 0 ~}}
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 related page-related">
                     <h3 class="blogs">Related posts</h3>
                     <div class="mdc-layout-grid">
                         <div class="mdc-layout-grid__inner">
-                            {{#each supplimentaryResponses.related_posts.hits.hits}}
+                            {{#each supplimentaryResponses.related_posts.hits.hits ~}}
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet  mdc-layout-grid__cell--span-4-phone">
                                 {{{_source.rendered.scvo_gist}}}
                             </div>
-                            {{/each}}
+                            {{/each ~}}
                         </div>
                     </div>
                 </div>
-                {{/compare}}
+                {{/compare ~}}
             </div>
         </div>
-        {{/handle_404}}
+        {{/handle_404 ~}}
     </div>
     <div class="swiper-container">
         <div class="swiper-wrapper">
