--- a/functions/test-db/json2/scvo/templates/pages/page-head-tags.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-head-tags.hbs
@@ -1,29 +1,26 @@
-{{#if primaryResponse.hits.hits.[0]}}
-    {{#with primaryResponse.hits.hits.[0]._source}}
-        {{#ifAny title og_title}}
-            <title>SCVO – {{{default title og_title}}}</title>
-            <meta property="og:title" content="SCVO – {{{default title og_title}}}" data-dynamic="true">
-        {{else}}
-            <title>SCVO – Scottish Council for Voluntary Organisations</title>
-            <meta property="og:title" content="SCVO – Scottish Council for Voluntary Organisations" data-dynamic="true">
-        {{/ifAny}}
-
-        <meta property="og:image" content="https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/logos/scvo-logo.jpg" data-dynamic="true">
-        <meta property="og:image:width" content="96" data-dynamic="true">
-        <meta property="og:image:height" content="96" data-dynamic="true">
-
-        {{#ifAny og_summary description ../og_summary ../description}}
-            <meta property="og:summary" content="{{default og_summary (default ../og_summary (default description ../description))}}" data-dynamic="true">
-            <meta name="description" content="{{default description (default ../description (default og_summary ../og_summary))}}" data-dynamic="true">
-        {{/ifAny}}
-
-        {{#if rendered.json_ld}}
-            <script type="application/ld+json" data-dynamic="true">
-                {{{rendered.json_ld}}}
-            </script>
-        {{/if}}
-    {{/with}}
+{{#if primaryResponse.hits.hits.[0] ~}}
+{{#with primaryResponse.hits.hits.[0]._source ~}}
+{{#ifAny title og_title ~}}
+<title>SCVO – {{{default title og_title}}}</title>
+<meta property="og:title" content="SCVO – {{{default title og_title}}}" data-dynamic="true">
 {{else}}
-    <title>SCVO – Scottish Council for Voluntary Organisations</title>
-    <meta property="og:title" content="SCVO – Scottish Council for Voluntary Organisations" data-dynamic="true">
-{{/if}}
+<title>SCVO – Scottish Council for Voluntary Organisations</title>
+<meta property="og:title" content="SCVO – Scottish Council for Voluntary Organisations" data-dynamic="true">
+{{/ifAny ~}}
+<meta property="og:image" content="https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/logos/scvo-logo-square.png" data-dynamic="true">
+<meta property="og:image:width" content="96" data-dynamic="true">
+<meta property="og:image:height" content="96" data-dynamic="true">
+{{#ifAny og_summary description ../og_summary ../description ~}}
+<meta property="og:summary" content="{{default og_summary (default ../og_summary (default description ../description))}}" data-dynamic="true">
+<meta name="description" content="{{default description (default ../description (default og_summary ../og_summary))}}" data-dynamic="true">
+{{/ifAny ~}}
+{{#if rendered.json_ld ~}}
+<script type="application/ld+json" data-dynamic="true">
+{{{rendered.json_ld}}}
+</script>
+{{/if ~}}
+{{/with ~}}
+{{else}}
+<title>SCVO – Scottish Council for Voluntary Organisations</title>
+<meta property="og:title" content="SCVO – Scottish Council for Voluntary Organisations" data-dynamic="true">
+{{/if ~}}
