--- a/functions/test-db/json2/scvo/templates/pages/page-jobs-landing.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-jobs-landing.hbs
@@ -1,7 +1,7 @@
 <div class="page jobs-landing">
     {{> header_splash}}
     <div class="container-fluid">
-        {{#> handle_404}}
+        {{#> handle_404 ~}}
         {{> breadcrumbs}}
         <div class="mdc-layout-grid equal-height support v-margin-full">
             <div class="mdc-layout-grid__inner">
@@ -52,51 +52,36 @@
                     <h2>Top jobs on <strong>good</strong>moves</h2>
                     <div class="mdc-layout-grid">
                         <div class="mdc-layout-grid__inner">
-                            {{#each supplimentaryResponses.goodmoves_latest.hits.hits}}
+                            {{#each supplimentaryResponses.goodmoves_latest.hits.hits ~}}
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet  mdc-layout-grid__cell--span-4-phone">
                                 {{{_source.rendered.scvo_gist}}}
                             </div>
-                            {{/each}}
+                            {{/each ~}}
                         </div>
                     </div>
                     <p>
                         <a href="/jobs/search" class="mdc-button mdc-button--raised">Find more jobs</a>
                     </p>
                 </div>
-                <!-- <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone content page-content">
-                    <h2>Current CJS vacancies</h2>
-                    <div class="mdc-layout-grid">
-                        <div class="mdc-layout-grid__inner">
-                            { {#each supplimentaryResponses.cjs_latest.hits.hits}}
-                            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet  mdc-layout-grid__cell--span-4-phone">
-                                { { {_source.rendered.scvo_gist}}}
-                            </div>
-                            { {/each}}
-                        </div>
-                    </div>
-                    <p>
-                        <a href="/jobs/community-jobs-scotland" class="mdc-button mdc-button--raised">Browse all vacancies</a>
-                    </p>
-                </div> -->
-                {{#compare supplimentaryResponses.related_training.hits.total ">" 0}}
+                {{#compare supplimentaryResponses.related_training.hits.total ">" 0 ~}}
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone related page-related">
                     <h2>Our training courses</h2>
                     <div class="mdc-layout-grid">
                         <div class="mdc-layout-grid__inner">
-                            {{#each supplimentaryResponses.related_training.hits.hits}}
+                            {{#each supplimentaryResponses.related_training.hits.hits ~}}
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet  mdc-layout-grid__cell--span-4-phone">
                                 {{{_source.rendered.scvo_gist}}}
                             </div>
-                            {{/each}}
+                            {{/each ~}}
                         </div>
                     </div>
                     <p>
                         <a href="/events?course_type=Training+Course" class="mdc-button mdc-button--raised">See all courses</a>
                     </p>
                 </div>
-                {{/compare}}
+                {{/compare ~}}
             </div>
         </div>
-        {{/handle_404}}
+        {{/handle_404 ~}}
     </div>
 </div>
