--- a/functions/test-db/json2/scvo/templates/pages/page-press.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-press.hbs
@@ -3,7 +3,7 @@
         <div class="splash-overlay{{#if supplimentaryResponses.page.hits.hits.[0]._source.hide_overlay}} splash-overlay-hidden{{/if}}">
             <div class="container-fluid">
                 <div class="mdc-layout-grid">
-                    {{#if supplimentaryResponses.page.hits.hits.[0]._source.header_text}}
+                    {{#if supplimentaryResponses.page.hits.hits.[0]._source.header_text ~}}
                     <img src="{{supplimentaryResponses.page.hits.hits.[0]._source.header_text}}" alt="{{supplimentaryResponses.page.hits.hits.[0]._source.title}}" class="header-text" />
                     {{else}}
                     <h1 class="header-text">
@@ -11,7 +11,7 @@
                             Press &amp; media
                         </span>
                     </h1>
-                    {{/if}}
+                    {{/if ~}}
                 </div>
                 {{> header_caption}}
             </div>
@@ -22,24 +22,22 @@
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content post-content">
-                    {{#compare primaryResponse.hits.total ">" 0}}
+                    {{#compare primaryResponse.hits.total ">" 0 ~}}
                     {{> search_info}}
                     <ul class="supplimentary-list">
-                        {{#each primaryResponse.hits.hits}}
+                        {{#each primaryResponse.hits.hits ~}}
                         {{{_source.rendered.scvo_list}}}
-                        {{/each}}
+                        {{/each ~}}
                     </ul>
                     {{> pagination}}
                     {{else}}
                     <p>
                         No posts by this author could be loaded.
                     </p>
-                    {{/compare}}
+                    {{/compare ~}}
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar post-sidebar">
-                    {{#with supplimentaryResponses.page.hits.hits.[0]._source}}
-                    {{{rendered.scvo_full}}}
-                    {{/with}}
+                    {{{supplimentaryResponses.page.hits.hits.[0]._source.rendered.scvo_full}}}
                 </div>
             </div>
         </div>
