--- a/functions/test-db/json2/scvo/templates/posts/post-amp.hbs
+++ b/functions/test-db/json2/scvo/templates/posts/post-amp.hbs
@@ -1,8 +1,7 @@
 <div class="post amp">
     {{> breadcrumbs_posts}}
-
-    {{#with primaryResponse.hits.hits.[0]._source}}
-        <h1>{{{title}}}</h1>
-        {{{rendered.amp_full}}}
-    {{/with}}
+    {{#with primaryResponse.hits.hits.[0]._source ~}}
+    <h1>{{{title}}}</h1>
+    {{{rendered.amp_full}}}
+    {{/with ~}}
 </div>
