--- a/functions/test-db/json2/scvo/templates/posts/post-author.hbs
+++ b/functions/test-db/json2/scvo/templates/posts/post-author.hbs
@@ -5,11 +5,11 @@
                 <div class="mdc-layout-grid">
                     <h1 class="header-text">
                         <span class="header-text-banner">
-                            {{#if supplimentaryResponses.staff_profile.hits.hits.[0]}}
+                            {{#if supplimentaryResponses.staff_profile.hits.hits.[0] ~}}
                             {{{supplimentaryResponses.staff_profile.hits.hits.[0]._source.rendered.scvo_header}}}
                             {{else}}
                             {{{supplimentaryResponses.author_profile.hits.hits.[0]._source.rendered.scvo_header}}}
-                            {{/if}}
+                            {{/if ~}}
                         </span>
                     </h1>
                 </div>
@@ -18,26 +18,26 @@
         </div>
     </div>
     <div class="container-fluid">
-        {{#> handle_404}}
+        {{#> handle_404 ~}}
         {{> breadcrumbs_posts}}
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content post-content">
-                    {{#compare primaryResponse.hits.total ">" 0}}
-                    {{#compare primaryResponse.hits.total ">" 10}}
+                    {{#compare primaryResponse.hits.total ">" 0 ~}}
+                    {{#compare primaryResponse.hits.total ">" 10 ~}}
                     {{> search_info}}
-                    {{/compare}}
+                    {{/compare ~}}
                     <ul class="supplimentary-list">
-                        {{#each primaryResponse.hits.hits}}
+                        {{#each primaryResponse.hits.hits ~}}
                         {{{_source.rendered.scvo_list}}}
-                        {{/each}}
+                        {{/each ~}}
                     </ul>
                     {{> pagination}}
                     {{else}}
                     <p>
                         No posts by this author could be loaded.
                     </p>
-                    {{/compare}}
+                    {{/compare ~}}
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar post-sidebar">
                     <div class="author-about static-sidebar">
@@ -50,6 +50,6 @@
                 </div>
             </div>
         </div>
-        {{/handle_404}}
+        {{/handle_404 ~}}
     </div>
 </div>
