--- a/functions/test-db/json2/scvo/templates/posts/post-category-rss.hbs
+++ b/functions/test-db/json2/scvo/templates/posts/post-category-rss.hbs
@@ -1,3 +1,3 @@
-        {{#each primaryResponse.hits.hits}}
-            {{{_source.rendered.rss}}}
-        {{/each}}
+{{#each primaryResponse.hits.hits ~}}
+{{{_source.rendered.rss}}}
+{{/each ~}}
