--- a/functions/test-db/json2/scvo/templates/staff/staff-search.hbs
+++ b/functions/test-db/json2/scvo/templates/staff/staff-search.hbs
@@ -3,7 +3,7 @@
         <div class="splash-overlay{{#if primaryResponse.hits.hits.[0]._source.hide_overlay}} splash-overlay-hidden{{/if}}">
             <div class="container-fluid">
                 <div class="mdc-layout-grid">
-                    {{#if primaryResponse.hits.hits.[0]._source.header_text}}
+                    {{#if primaryResponse.hits.hits.[0]._source.header_text ~}}
                     <img src="{{primaryResponse.hits.hits.[0]._source.header_text}}" alt="{{primaryResponse.hits.hits.[0]._source.title}}" class="header-text" />
                     {{else}}
                     <h1 class="header-text">
@@ -11,7 +11,7 @@
                             Staff team
                         </span>
                     </h1>
-                    {{/if}}
+                    {{/if ~}}
                 </div>
                 {{> header_caption}}
             </div>
@@ -36,9 +36,9 @@
                                     <div class="mdc-form-field">
                                         <select class="mdc-select" role="listbox" id="department" name="department" onchange="this.form.submit();">
                                             <option value="" {{#if params.query.department}}{{else}}selected{{/if}}>All departments</option>
-                                            {{#each supplimentaryResponses.departments.aggregations.departments.buckets}}
+                                            {{#each supplimentaryResponses.departments.aggregations.departments.buckets ~}}
                                             <option value="{{slugify key}}" {{#compare ../params.query.department "===" (slugify key)}}selected{{/compare}}>{{key}}</option>
-                                            {{/each}}
+                                            {{/each ~}}
                                         </select>
                                     </div>
                                 </div>
@@ -46,9 +46,9 @@
                                     <div class="mdc-form-field">
                                         <select class="mdc-select" role="listbox" id="city" name="city" onchange="this.form.submit();">
                                             <option value="" {{#if params.query.city}}{{else}}selected{{/if}}>All cities</option>
-                                            {{#each supplimentaryResponses.departments.aggregations.cities.buckets}}
+                                            {{#each supplimentaryResponses.departments.aggregations.cities.buckets ~}}
                                             <option value="{{slugify key}}" {{#compare ../params.query.city "===" (slugify key)}}selected{{/compare}}>{{key}}</option>
-                                            {{/each}}
+                                            {{/each ~}}
                                         </select>
                                     </div>
                                 </div>
@@ -56,14 +56,14 @@
                         </div>
                     </form>
 
-                    {{#each primaryResponse.aggregations.query.buckets}}
+                    {{#each primaryResponse.aggregations.query.buckets ~}}
                     <div class="v-margin staff-list">
                         <h2>{{key}}</h2>
-                        {{#each staff.hits.hits}}
+                        {{#each staff.hits.hits ~}}
                         {{{_source.rendered.scvo_list}}}
-                        {{/each}}
+                        {{/each ~}}
                     </div>
-                    {{/each}}
+                    {{/each ~}}
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
                     {{> menu_about}}
