--- a/functions/test-db/json2/scvo/templates/staff/staff.hbs
+++ b/functions/test-db/json2/scvo/templates/staff/staff.hbs
@@ -3,7 +3,7 @@
         <div class="splash-overlay{{#if primaryResponse.hits.hits.[0]._source.hide_overlay}} splash-overlay-hidden{{/if}}">
             <div class="container-fluid">
                 <div class="mdc-layout-grid">
-                    {{#if primaryResponse.hits.hits.[0]._source.header_text}}
+                    {{#if primaryResponse.hits.hits.[0]._source.header_text ~}}
                     <img src="{{primaryResponse.hits.hits.[0]._source.header_text}}" alt="{{primaryResponse.hits.hits.[0]._source.title}}" class="header-text" />
                     {{else}}
                     <h1 class="header-text">
@@ -11,7 +11,7 @@
                             {{{primaryResponse.hits.hits.[0]._source.rendered.scvo_header}}}
                         </span>
                     </h1>
-                    {{/if}}
+                    {{/if ~}}
                 </div>
                 {{> header_caption}}
             </div>
@@ -32,7 +32,7 @@
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
                     {{> menu_about}}
                 </div>
-                {{#compare supplimentaryResponses.author_posts.hits.total ">" 0}}
+                {{#compare supplimentaryResponses.author_posts.hits.total ">" 0 ~}}
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 related page-related">
                     <h3 class="blogs">
                         Latest post{{#compare supplimentaryResponses.author_posts.hits.total ">" 1}}s{{/compare}}
@@ -40,20 +40,20 @@
                     </h3>
                     <div class="mdc-layout-grid">
                         <div class="mdc-layout-grid__inner">
-                            {{#each supplimentaryResponses.author_posts.hits.hits}}
+                            {{#each supplimentaryResponses.author_posts.hits.hits ~}}
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet  mdc-layout-grid__cell--span-4-phone">
                                 {{{_source.rendered.scvo_list}}}
                             </div>
-                            {{/each}}
+                            {{/each ~}}
                         </div>
                     </div>
-                    {{#compare supplimentaryResponses.author_posts.hits.total ">" 3}}
+                    {{#compare supplimentaryResponses.author_posts.hits.total ">" 3 ~}}
                     <p class="v-margin read-more">
                         <a href="/post/author/{{{supplimentaryResponses.author_posts.hits.hits.[0]._source.author_slug}}}" class="mdc-button mdc-button--raised">More posts</a>
                     </p>
-                    {{/compare}}
+                    {{/compare ~}}
                 </div>
-                {{/compare}}
+                {{/compare ~}}
             </div>
         </div>
     </div>
