--- a/functions/test-db/json2/scvo/templates/trustees/trustee.hbs
+++ b/functions/test-db/json2/scvo/templates/trustees/trustee.hbs
@@ -3,7 +3,7 @@
         <div class="splash-overlay{{#if primaryResponse.hits.hits.[0]._source.hide_overlay}} splash-overlay-hidden{{/if}}">
             <div class="container-fluid">
                 <div class="mdc-layout-grid">
-                    {{#if primaryResponse.hits.hits.[0]._source.header_text}}
+                    {{#if primaryResponse.hits.hits.[0]._source.header_text ~}}
                     <img src="{{primaryResponse.hits.hits.[0]._source.header_text}}" alt="{{primaryResponse.hits.hits.[0]._source.title}}" class="header-text" />
                     {{else}}
                     <h1 class="header-text">
@@ -11,7 +11,7 @@
                             Trustee vacancy
                         </span>
                     </h1>
-                    {{/if}}
+                    {{/if ~}}
                 </div>
                 {{> header_caption}}
             </div>
@@ -31,9 +31,7 @@
                     {{> trustee_search}}
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content trustee-content">
-                    {{#with primaryResponse.hits.hits.[0]}}
-                    {{{_source.rendered.scvo_full}}}
-                    {{/with}}
+                    {{{primaryResponse.hits.hits.[0]._source.rendered.scvo_full}}}
                 </div>
             </div>
         </div>
