--- a/functions/test-db/json2/digitalparticipation/layouts/default.hbs
+++ b/functions/test-db/json2/digitalparticipation/layouts/default.hbs
@@ -22,7 +22,7 @@
     <meta name="msapplication-TileColor" content="#00838f">
     <meta name="msapplication-TileImage" content="https://storage.googleapis.com/digitalparticipation/images/icons/ms-icon-144x144.png">
     <meta name="theme-color" content="#00838f">
-    <link type="text/css" rel="stylesheet" href="https://storage.googleapis.com/scvo-assets/assets/css/material-components-web.min.css">
+    <link type="text/css" rel="stylesheet" href="/assets/css/material-components-web.min.css">
     <link type="text/css" rel="stylesheet" href="/assets/fonts/fontawesome/css/fontawesome-all.min.css">
     <link type="text/css" rel="stylesheet" href="/assets/css/digitalparticipation-styles.css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -143,10 +143,10 @@
                                 </div>
                                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
                                     <a href="http://gov.scot/Topics/Economy/digital">
-                                        <img src="https://storage.googleapis.com/scvo-assets/assets/images/digital-scotland-logo.png" alt="Digital Scotland" class="logo digital-scotland" />
+                                        <img src="/assets/images/digital-scotland-logo.png" alt="Digital Scotland" class="logo digital-scotland" />
                                     </a>
                                     <a href="https://scvo.org" title="Scottish Council for Voluntary Organisations">
-                                        <img src="https://storage.googleapis.com/scvo-assets/assets/images/scvo-logo.png" alt="Scottish Council for Voluntary Organisations" class="logo scvo" />
+                                        <img src="/assets/images/scvo-logo.png" alt="Scottish Council for Voluntary Organisations" class="logo scvo" />
                                     </a>
                                 </div>
                             </div>
@@ -156,9 +156,9 @@
             </footer>
         </div>
     </scvo-site>
-    <script type="text/javascript" src="https://storage.googleapis.com/scvo-assets/assets/js/material-components-web.js"></script>
+    <script type="text/javascript" src="/assets/js/material-components-web.js"></script>
     <script type="text/javascript" id="cookieinfo"
-    	src="https://storage.googleapis.com/scvo-assets/assets/js/cookieinfo.min.js"
+    	src="/assets/js/cookieinfo.min.js"
     	data-bg="#02162E"
     	data-fg="#FFFFFF"
     	data-link="#FFFFFF"
