--- a/functions/test-db/json2/scvo/templates/pages/page-gathering.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-gathering.hbs
@@ -69,4 +69,4 @@
         <div class="swiper-button-prev"></div> -->
     </div>
 </div>
-<script src="https://storage.googleapis.com/scvo-assets/assets/js/scvo/gathering-landing.js"></script>
+<script src="/assets/js/scvo/gathering-landing.js"></script>
